fix swagger'
